let jpf work. Moved all codebase to java 8. Removed randa changes (sry). stuck on deadlock found by jpf